Silhouettes of obscured items are no longer displayed

--- a/simulation/templates/template_formation.xml
+++ b/simulation/templates/template_formation.xml
@@ -73,7 +73,7 @@
   </UnitMotion>
   <VisualActor>
     <Actor>props/units/standards/formation.xml</Actor>
-    <SilhouetteDisplay>true</SilhouetteDisplay>
+    <SilhouetteDisplay>false</SilhouetteDisplay>
     <SilhouetteOccluder>false</SilhouetteOccluder>
     <VisibleInAtlasOnly>false</VisibleInAtlasOnly>
   </VisualActor>
