--- a/simulation/templates/template_structure_civic_temple.xml
+++ b/simulation/templates/template_structure_civic_temple.xml
@@ -53,11 +53,7 @@
       <constructed>interface/complete/building/complete_temple.xml</constructed>
     </SoundGroups>
   </Sound>
-  <TerritoryInfluence>
-    <Root>false</Root>
-    <Radius>40</Radius>
-    <Weight>30000</Weight>
-  </TerritoryInfluence>
+  <TerritoryInfluence disable="" />
   <Trainer>
     <BatchTimeModifier>0.8</BatchTimeModifier>
     <Entities datatype="tokens">
