--- a/simulation/templates/template_structure_defensive_tower_artillery.xml
+++ b/simulation/templates/template_structure_defensive_tower_artillery.xml
@@ -76,9 +76,5 @@
       <attack_ranged>attack/siege/ballist_attack.xml</attack_ranged>
     </SoundGroups>
   </Sound>
-  <TerritoryInfluence>
-    <Root>false</Root>
-    <Radius>32</Radius>
-    <Weight>30000</Weight>
-  </TerritoryInfluence>
+  <TerritoryInfluence disable="" />
 </Entity>
