--- a/simulation/templates/template_structure_defensive_tower_stone.xml
+++ b/simulation/templates/template_structure_defensive_tower_stone.xml
@@ -51,9 +51,5 @@
       tower_health
     </Technologies>
   </Researcher>
-  <TerritoryInfluence>
-    <Root>false</Root>
-    <Radius>32</Radius>
-    <Weight>30000</Weight>
-  </TerritoryInfluence>
+  <TerritoryInfluence disable="" />
 </Entity>
