--- a/simulation/templates/template_structure_defensive_wall.xml
+++ b/simulation/templates/template_structure_defensive_wall.xml
@@ -28,9 +28,5 @@
       <constructed>interface/complete/building/complete_wall.xml</constructed>
     </SoundGroups>
   </Sound>
-  <TerritoryInfluence>
-    <Root>false</Root>
-    <Radius>20</Radius>
-    <Weight>65535</Weight>
-  </TerritoryInfluence>
+  <TerritoryInfluence disable="" />
 </Entity>
