--- a/simulation/templates/template_structure_military_elephant_stable.xml
+++ b/simulation/templates/template_structure_military_elephant_stable.xml
@@ -41,9 +41,7 @@
       <select>interface/select/building/sel_elephant_stable.xml</select>
     </SoundGroups>
   </Sound>
-  <TerritoryInfluence>
-    <Radius>38</Radius>
-  </TerritoryInfluence>
+  <TerritoryInfluence disable="" />
   <Trainer>
     <BatchTimeModifier>0.7</BatchTimeModifier>
     <Entities datatype="tokens">
