--- a/simulation/templates/template_structure_resource_corral.xml
+++ b/simulation/templates/template_structure_resource_corral.xml
@@ -47,11 +47,7 @@
       <constructed>interface/complete/building/complete_corral.xml</constructed>
     </SoundGroups>
   </Sound>
-  <TerritoryInfluence>
-    <Root>false</Root>
-    <Radius>20</Radius>
-    <Weight>30000</Weight>
-  </TerritoryInfluence>
+  <TerritoryInfluence disable="" />
   <Trainer>
     <BatchTimeModifier>0.7</BatchTimeModifier>
     <Entities datatype="tokens">
