--- a/simulation/templates/template_structure_special_rotarymill.xml
+++ b/simulation/templates/template_structure_special_rotarymill.xml
@@ -42,11 +42,7 @@
   <StatusBars>
     <HeightOffset>8.0</HeightOffset>
   </StatusBars>
-  <TerritoryInfluence>
-    <Root>false</Root>
-    <Radius>32</Radius>
-    <Weight>40000</Weight>
-  </TerritoryInfluence>
+  <TerritoryInfluence disable="" />
   <Vision>
     <Range>40</Range>
   </Vision>
