--- a/simulation/templates/template_structure_civic_civil_centre_military_colony.xml
+++ b/simulation/templates/template_structure_civic_civil_centre_military_colony.xml
@@ -48,7 +48,5 @@
       <constructed>interface/complete/building/complete_gymnasium.xml</constructed>
     </SoundGroups>
   </Sound>
-  <TerritoryInfluence>
-    <Radius>80</Radius>
-  </TerritoryInfluence>
+  <TerritoryInfluence disable="" />
 </Entity>
