--- a/simulation/templates/template_structure_economic_farmstead.xml
+++ b/simulation/templates/template_structure_economic_farmstead.xml
@@ -60,11 +60,7 @@
       <alert_end>interface/alarm/alarm_alert_1.xml</alert_end>
     </SoundGroups>
   </Sound>
-  <TerritoryInfluence>
-    <Root>false</Root>
-    <Radius>20</Radius>
-    <Weight>30000</Weight>
-  </TerritoryInfluence>
+  <TerritoryInfluence disable="" />
   <Vision>
     <Range>20</Range>
   </Vision>
