--- a/simulation/templates/template_structure_special_library.xml
+++ b/simulation/templates/template_structure_special_library.xml
@@ -37,11 +37,7 @@
       <constructed>interface/complete/building/complete_library.xml</constructed>
     </SoundGroups>
   </Sound>
-  <TerritoryInfluence>
-    <Root>false</Root>
-    <Radius>50</Radius>
-    <Weight>40000</Weight>
-  </TerritoryInfluence>
+  <TerritoryInfluence disable="" />
   <Vision>
     <Range>40</Range>
   </Vision>
